test: 스크랩 테스트