@@ -1,19 +1,18 @@
-package com.zkrypto.zkMatch.member;
+package com.zkrypto.zkMatch.scrab;
 
 import com.zkrypto.zkMatch.domain.corporation.application.dto.request.CorporationCreationCommand;
 import com.zkrypto.zkMatch.domain.corporation.application.service.CorporationService;
-import com.zkrypto.zkMatch.domain.member.application.dto.response.MemberPostResponse;
-import com.zkrypto.zkMatch.domain.member.application.service.MemberService;
 import com.zkrypto.zkMatch.domain.member.domain.entity.Member;
 import com.zkrypto.zkMatch.domain.member.domain.repository.MemberRepository;
-import com.zkrypto.zkMatch.domain.post.application.dto.request.PostApplyCommand;
 import com.zkrypto.zkMatch.domain.post.application.dto.request.PostCreationCommand;
 import com.zkrypto.zkMatch.domain.post.application.dto.response.PostResponse;
 import com.zkrypto.zkMatch.domain.post.application.service.PostService;
 import com.zkrypto.zkMatch.domain.post.domain.repository.PostRepository;
 import com.zkrypto.zkMatch.domain.recruit.domain.repository.RecruitRepository;
+import com.zkrypto.zkMatch.domain.scrab.application.dto.request.ScrabCommand;
+import com.zkrypto.zkMatch.domain.scrab.application.dto.response.ScrabResponse;
+import com.zkrypto.zkMatch.domain.scrab.application.service.ScrabService;
 import com.zkrypto.zkMatch.global.utils.ReflectionUtil;
-import lombok.extern.slf4j.Slf4j;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -27,10 +26,9 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @SpringBootTest
-@Slf4j
 @Transactional
 @Rollback
-public class MemberServiceTest {
+public class ScrabServiceTest {
     @Autowired
     CorporationService corporationService;
 
@@ -41,10 +39,10 @@ public class MemberServiceTest {
     PostService postService;
 
     @Autowired
-    MemberService memberService;
+    ScrabService scrabService;
 
     @Test
-    void 나의_지원_내역_테스트() {
+    void 스크랩_테스트() {
         // 기업 생성
         CorporationCreationCommand corporationCreationCommand = new CorporationCreationCommand();
         ReflectionUtil.setter(corporationCreationCommand, "corporationName", "지크립토");
@@ -69,17 +67,53 @@ public class MemberServiceTest {
         // 공고 조회
         List<PostResponse> posts = postService.getPost();
 
-        // 공고 지원
-        PostApplyCommand postApplyCommand = new PostApplyCommand();
-        ReflectionUtil.setter(postApplyCommand, "postId", posts.get(0).getPostId());
-        postService.applyPost(member.getMemberId(), postApplyCommand);
-
-        // 지원 내역 불러오기
-        List<MemberPostResponse> post = memberService.getPost(member.getMemberId());
+        // 공고 스크랩
+        ScrabCommand scrabCommand = new ScrabCommand();
+        ReflectionUtil.setter(scrabCommand, "postId", posts.get(0).getPostId());
+        scrabService.scrabPost(member.getMemberId(), scrabCommand);
 
         // 검증
-        assertThat(post.size()).isEqualTo(1);
-        assertThat(post.getFirst().getTitle()).isEqualTo("하이");
+        List<ScrabResponse> scrab = scrabService.getScrab(member.getMemberId());
+        assertThat(scrab.size()).isEqualTo(1);
+        assertThat(scrab.get(0).getPostTitle()).isEqualTo("하이");
+    }
+
+    @Test
+    void 스크랩_해제_테스트() {
+        // 기업 생성
+        CorporationCreationCommand corporationCreationCommand = new CorporationCreationCommand();
+        ReflectionUtil.setter(corporationCreationCommand, "corporationName", "지크립토");
+        ReflectionUtil.setter(corporationCreationCommand, "loginId", "1234");
+        ReflectionUtil.setter(corporationCreationCommand, "password", "1234");
+
+        corporationService.createCorporation(corporationCreationCommand);
+
+        // 관리자 조회
+        Member admin = memberRepository.findMemberByLoginId("1234").get();
+
+        // 공고 생성
+        PostCreationCommand postCreationCommand = new PostCreationCommand();
+        ReflectionUtil.setter(postCreationCommand, "endDate", LocalDateTime.of(2026, 1,1, 1, 1));
+        ReflectionUtil.setter(postCreationCommand, "title", "하이");
+        corporationService.createPost(admin.getMemberId(), postCreationCommand);
+
+        // 멤버 생성
+        Member member = new Member();
+        memberRepository.save(member);
+
+        // 공고 조회
+        List<PostResponse> posts = postService.getPost();
+
+        // 공고 스크랩
+        ScrabCommand scrabCommand = new ScrabCommand();
+        ReflectionUtil.setter(scrabCommand, "postId", posts.get(0).getPostId());
+        scrabService.scrabPost(member.getMemberId(), scrabCommand);
+
+        // 스크랩 해제
+        scrabService.scrabPost(member.getMemberId(), scrabCommand);
+
+        // 검증
+        List<ScrabResponse> scrab = scrabService.getScrab(member.getMemberId());
+        assertThat(scrab.size()).isEqualTo(0);
     }
 }
-
